pridany HladatForm pre KulturnePodujatie a Pamiatky, prepojenie s formami pre KulturePodujatie a Pamiatky, validacie pre hladanie, zmena PrimarnehoForm, zmena hodnotenieComboBox pre Kulturne Podujatie a Pamiatky, osetrenie zmeny textu v PridatForm pre Kulturne Podujatie a Pamiatky po pridani podrobnosti, pridanie triedy Test pre KulturnePodujatie, uprava metody toString pre KulturnePodujatie a Pamiatka, pridanie upravitPodrobnosti metody do upravit pre KulturnePodujatie, zoradenie podla datumy v meotde DajVsetky

--- a/src/main/java/sk/upjs/ics/traveltracker_paz1c/KulturnePodujatieForm.form
+++ b/src/main/java/sk/upjs/ics/traveltracker_paz1c/KulturnePodujatieForm.form
@@ -25,36 +25,32 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" attributes="0">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" attributes="0">
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" alignment="0" attributes="0">
-                              <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
-                              <Component id="hladatTextField" min="-2" pref="93" max="-2" attributes="0"/>
-                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                              <Component id="hladatButton" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace type="separate" max="-2" attributes="0"/>
-                          </Group>
-                          <Group type="102" alignment="1" attributes="0">
-                              <EmptySpace max="-2" attributes="0"/>
-                              <Component id="stornoButton" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
-                          </Group>
-                      </Group>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="upravitButton" min="-2" max="-2" attributes="0"/>
-                          <Component id="pridateButton" min="-2" max="-2" attributes="0"/>
-                      </Group>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
+                      <Component id="hladatTextField" max="32767" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="odstranitButton" min="-2" max="-2" attributes="0"/>
-                          <Component id="vsetkyButton" alignment="0" min="-2" max="-2" attributes="0"/>
-                      </Group>
+                      <Component id="hladatButton" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Component id="vsetkyButton" min="-2" pref="118" max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="1" attributes="0">
+                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                      <Component id="stornoButton" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
-                      <Component id="jScrollPane1" min="-2" pref="375" max="-2" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
+                      <Component id="pridatButton" min="-2" pref="70" max="-2" attributes="0"/>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <Component id="upravitButton" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <Component id="odstranitButton" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
+              <EmptySpace max="-2" attributes="0"/>
+          </Group>
+          <Group type="102" alignment="0" attributes="0">
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="jScrollPane1" min="-2" pref="375" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
@@ -66,18 +62,19 @@
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="hladatButton" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="hladatTextField" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="pridateButton" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="odstranitButton" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="vsetkyButton" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="vsetkyButton" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Component id="stornoButton" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="upravitButton" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="odstranitButton" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="pridatButton" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="18" max="32767" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="jScrollPane1" min="-2" pref="182" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="stornoButton" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -137,12 +134,12 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="stornoButtonActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="pridateButton">
+    <Component class="javax.swing.JButton" name="pridatButton">
       <Properties>
         <Property name="text" type="java.lang.String" value="Prida&#x165;"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="pridateButtonActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="pridatButtonActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JButton" name="upravitButton">
