--- a/src/main/java/sk/upjs/ics/traveltracker_paz1c/PridatTuristikaForm.form
+++ b/src/main/java/sk/upjs/ics/traveltracker_paz1c/PridatTuristikaForm.form
@@ -173,6 +173,9 @@
           <StringArray count="0"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="hodnotenieComboBoxActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JCheckBox" name="prejdeneCheckBox">
       <Properties>
