--- a/src/main/java/sk/upjs/ics/traveltracker_paz1c/ViacdnovyVyletForm.form
+++ b/src/main/java/sk/upjs/ics/traveltracker_paz1c/ViacdnovyVyletForm.form
@@ -169,6 +169,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="H&#x13e;ada&#x165;"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="hladatButtonActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
