--- a/src/main/java/sk/upjs/ics/traveltracker_paz1c/PrimarnyMainForm.form
+++ b/src/main/java/sk/upjs/ics/traveltracker_paz1c/PrimarnyMainForm.form
@@ -79,8 +79,8 @@
               <Component id="jScrollPane3" min="-2" pref="82" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="viacdnoveVyletyLabel" min="-2" max="-2" attributes="0"/>
-              <EmptySpace type="unrelated" max="32767" attributes="0"/>
-              <Component id="jScrollPane4" min="-2" pref="62" max="-2" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <Component id="jScrollPane4" pref="70" max="32767" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
