upravenie rozmerov okna upravit viacdnovyvylet

--- a/src/main/java/sk/upjs/ics/traveltracker_paz1c/UpravitKultPodujatieForm.form
+++ b/src/main/java/sk/upjs/ics/traveltracker_paz1c/UpravitKultPodujatieForm.form
@@ -53,14 +53,17 @@
                                       <Component id="NavstiveneCheckBox" min="-2" max="-2" attributes="0"/>
                                       <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
                                   </Group>
-                                  <Component id="UpravitButton" alignment="1" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                   <Component id="TypTextField" max="32767" attributes="0"/>
                                   <Component id="DatumDatePicker" pref="102" max="32767" attributes="0"/>
-                                  <Component id="StornoButton" min="-2" max="-2" attributes="0"/>
                               </Group>
+                          </Group>
+                          <Group type="102" alignment="1" attributes="0">
+                              <Component id="UpravitButton" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace type="separate" max="-2" attributes="0"/>
+                              <Component id="StornoButton" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
